RESOLVED FIXED163997
LayoutTest accessibility/mac/meter-gauge-value-description.html failing
https://bugs.webkit.org/show_bug.cgi?id=163997
Summary LayoutTest accessibility/mac/meter-gauge-value-description.html failing
Ryan Haddad
Reported 2016-10-25 17:08:08 PDT
LayoutTest accessibility/mac/meter-gauge-value-description.html failing https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r207854%20(10972)/results.html --- /Volumes/Data/slave/elcapitan-release-tests-wk1/build/layout-test-results/accessibility/mac/meter-gauge-value-description-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk1/build/layout-test-results/accessibility/mac/meter-gauge-value-description-actual.txt @@ -5,10 +5,10 @@ PASS meter1.valueDescription is 'AXValueDescription: ' -PASS meter2.valueDescription is 'AXValueDescription: suboptimal value' -PASS meter3.valueDescription is 'AXValueDescription: optimal value' -PASS meter4.valueDescription is 'AXValueDescription: critical value' -PASS meter5.valueDescription is 'AXValueDescription: 50 hours, optimal value' +FAIL meter2.valueDescription should be AXValueDescription: suboptimal value. Was AXValueDescription: suboptimal. +FAIL meter3.valueDescription should be AXValueDescription: optimal value. Was AXValueDescription: optimum. +FAIL meter4.valueDescription should be AXValueDescription: critical value. Was AXValueDescription: less good. +FAIL meter5.valueDescription should be AXValueDescription: 50 hours, optimal value. Was AXValueDescription: 50 hours, optimum. PASS successfullyParsed is true TEST COMPLETE
Attachments
patch (4.57 KB, patch)
2016-10-25 17:42 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2016-10-25 17:08:51 PDT
Ryan Haddad
Comment 2 2016-10-25 17:14:59 PDT
Nan Wang
Comment 3 2016-10-25 17:42:26 PDT
WebKit Commit Bot
Comment 4 2016-10-25 18:18:26 PDT
Comment on attachment 292856 [details] patch Clearing flags on attachment: 292856 Committed r207860: <http://trac.webkit.org/changeset/207860>
WebKit Commit Bot
Comment 5 2016-10-25 18:18:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.