LayoutTest accessibility/mac/meter-gauge-value-description.html failing https://bugs.webkit.org/show_bug.cgi?id=163997 <rdar://problem/28948637>

Reviewed by Chris Fleizach.

Source/WebCore:

I hand-edited the Localizable.strings file in a previous patch and my changes
were replaced by running update-webkit-localizable-strings script. Changed the
key to be the same as the value to keep consistency with other entries.

Re-enabled the failing test.

* English.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:
(WebCore::AXMeterGaugeRegionOptimumText):
(WebCore::AXMeterGaugeRegionSuboptimalText):
(WebCore::AXMeterGaugeRegionLessGoodText):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/181717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207860 268f45cc-cd09-0410-ab3c-d52691b4dbfc